--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- favicon-->
-    <link rel="shortcut icon" type="image/png" href="files/nimbbly-favicon.png">
+    <link rel="shortcut icon" type="image/png" href="img/nimbbly-favicon.png">
 
     <!--scrollreveal-->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
           <a class="navbar-brand" href="#pageup">
-            <img class="navimg" src="files/nimllogo.png">
+            <img class="navimg" src="img/nimllogo.png">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -342,14 +342,14 @@
                               </div>
                               <div class="col-lg-6 image4 d-none d-sm-none d-md-none d-lg-block d-xl-block">
                                 <div class="movimg">
-                                  <img class="animated swing" src="files/buddduu.png">
+                                  <img class="animated swing" src="img/buddduu.png">
                                 </div>
-                                <img class="ooa animated fadeIn" src="files/buddd11.png">
-                                <img class="oa animated rubberBand" src="files/buddd12.png">
-                                <img class="ob animated rubberBand" src="files/buddd13.png">
-                                <img class="oc animated flipInX" src="files/buddd14.png">
-                                <img class="od animated shake" src="files/buddd15.png">
-                                <img class="oe animated rubberBand" src="files/buddd17.png">
+                                <img class="ooa animated fadeIn" src="img/buddd11.png">
+                                <img class="oa animated rubberBand" src="img/buddd12.png">
+                                <img class="ob animated rubberBand" src="img/buddd13.png">
+                                <img class="oc animated flipInX" src="img/buddd14.png">
+                                <img class="od animated shake" src="img/buddd15.png">
+                                <img class="oe animated rubberBand" src="img/buddd17.png">
                               </div>
                             </div>
                           </div>
@@ -363,16 +363,16 @@
                               </div>
                               <div class="col-lg-6 image1 d-none d-sm-none d-md-none d-lg-block d-xl-block">
                                 <div class="movimg">
-                                  <img class="animated bounce bga" src="files/wind1.png">
-                                  <img class="animated bounce bgb" src="files/wind2.png">
+                                  <img class="animated bounce bga" src="img/wind1.png">
+                                  <img class="animated bounce bgb" src="img/wind2.png">
                                 </div>
-                                <img class="ob animated bounceIn" src="files/man1.png">
-                                <img class="oc animated bounceIn" src="files/man2.png">
-                                <img class="od animated bounceIn" src="files/woman.png">
-                                <img class="oe animated bounceIn" src="files/man3.png">
-                                <img class="of animated bounceIn" src="files/man4.png">
-                                <img class="og animated fadeIn" src="files/table.png">
-                                <img class="oh animated flipInX" src="files/plants.png">
+                                <img class="ob animated bounceIn" src="img/man1.png">
+                                <img class="oc animated bounceIn" src="img/man2.png">
+                                <img class="od animated bounceIn" src="img/woman.png">
+                                <img class="oe animated bounceIn" src="img/man3.png">
+                                <img class="of animated bounceIn" src="img/man4.png">
+                                <img class="og animated fadeIn" src="img/table.png">
+                                <img class="oh animated flipInX" src="img/plants.png">
                               </div>
                             </div>
                           </div>
@@ -386,24 +386,24 @@
                               </div>
                               <div class="col-lg-6 image2 d-none d-sm-none d-md-none d-lg-block d-xl-block">
                                 <div class="movimg">
-                                  <img class="bga animated shake" src="files/buddd15.png">
-                                  <img class="bgb animated flash" src="files/star.png">
-                                  <img class="bgc animated flash" src="files/star.png">
-                                  <img class="bgd animated flash" src="files/star.png">
+                                  <img class="bga animated shake" src="img/buddd15.png">
+                                  <img class="bgb animated flash" src="img/star.png">
+                                  <img class="bgc animated flash" src="img/star.png">
+                                  <img class="bgd animated flash" src="img/star.png">
                                 </div>
-                                <img class="oa animated bounceIn" src="files/leaf1.png">
-                                <img class="ob animated bounceIn" src="files/leaf2.png">
-                                <img class="oc" src="files/laptop.png">
-                                <img class="od" src="files/blast.png">
+                                <img class="oa animated bounceIn" src="img/leaf1.png">
+                                <img class="ob animated bounceIn" src="img/leaf2.png">
+                                <img class="oc" src="img/laptop.png">
+                                <img class="od" src="img/blast.png">
                                 <div class="fly">
-                                  <img class="oe" src="files/fire.png">
-                                  <img class="oee animated flash" src="files/fire2.png">
-                                  <img class="oh" src="files/rocket.png">
+                                  <img class="oe" src="img/fire.png">
+                                  <img class="oee animated flash" src="img/fire2.png">
+                                  <img class="oh" src="img/rocket.png">
                                 </div>
-                                <img class="of animated bounce" src="files/smoke.png">
-                                <img class="og animated bounce" src="files/smoke.png">
-                                <img class="off" src="files/smoke2.png">
-                                <img class="offa" src="files/smoke2.png">   
+                                <img class="of animated bounce" src="img/smoke.png">
+                                <img class="og animated bounce" src="img/smoke.png">
+                                <img class="off" src="img/smoke2.png">
+                                <img class="offa" src="img/smoke2.png">   
                             </div>
                           </div>
                           
@@ -432,7 +432,7 @@
       <div class="container-fluid">
         <div class="row web">
           <div class="col-lg-6">
-            <img class="img-left ob" src="files/webapp.png">
+            <img class="img-left ob" src="img/webapp.png">
           </div>
           <div class="col-lg-6 px-lg-5 my-auto">
             <article class="info-right">
@@ -448,7 +448,7 @@
         </div>
         <div class="row Hosting">
           <div class="col-lg-6 d-sm-block d-md-block d-lg-none d-xl-none">
-            <img class="img-left" src="files/host.png">
+            <img class="img-left" src="img/host.png">
           </div>
           <div class="col-lg-6 px-lg-5 my-auto">
             <article class="info-left">
@@ -462,12 +462,12 @@
             </article>
           </div>
           <div class="col-lg-6 d-none d-sm-none d-md-none d-lg-block d-xl-block">
-            <img class="img-right" src="files/host.png">
+            <img class="img-right" src="img/host.png">
           </div>
         </div>
         <div class="row branding">
           <div class="col-lg-6">
-            <img class="img-left" src="files/gdncb.png">
+            <img class="img-left" src="img/gdncb.png">
           </div>
           <div class="col-lg-6 px-lg-5 my-auto">
             <article class="info-right">
@@ -501,9 +501,9 @@
           </div>
           <div class="col-lg-6 movv1 text-center d-none d-sm-none d-md-none d-lg-block d-xl-block">
             <div class="imov">
-              <img class="animated wobble" src="files/bud4.png">
+              <img class="animated wobble" src="img/bud4.png">
             </div>
-            <img src="files/bud1.png">
+            <img src="img/bud1.png">
           </div>
         </div>
       </div>
@@ -516,7 +516,7 @@
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="p-1" src="files/pics2.png" style="width: 80px; height: 80px;">
+                  <img class="p-1" src="img/pics2.png" style="width: 80px; height: 80px;">
                   <small>igpesgroup.com</small>
                   <div class="col-lg-8 mx-auto">
                     <p class="py-5"><i class="fa fa-quote-left"></i> Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -524,14 +524,14 @@
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="p-1" src="files/pics2.png" style="width: 80px; height: 80px;">
+                  <img class="p-1" src="img/pics2.png" style="width: 80px; height: 80px;">
                   <small><a href="http://maxsom.org">maxsomenterprise.com</a></small>
                   <div class="col-lg-8 mx-auto">
                     <p class="py-5"><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  <i class="fa fa-quote-right"></i></p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="p-1" src="files/pics2.png" style="width: 80px; height: 80px;">
+                  <img class="p-1" src="img/pics2.png" style="width: 80px; height: 80px;">
                   <small><a href="https://jointpainarthritisng.com">jointpainarthritisng.com</a></small>
                   <div class="col-lg-8 mx-auto">
                     <p class="py-5"><i class="fa fa-quote-left"></i> Ut enim ad minim veniam,
@@ -552,12 +552,12 @@
           <div class="col-lg-4">
             <div class="card-deck cardblog1">
               <div class="card">
-                <img class="card-img-top" src="files/cardbg.png" alt="Card image cap">
+                <img class="card-img-top" src="img/cardbg.png" alt="Card image cap">
                 <div class="card-body">
                   <small class="text-muted">More from Nimbbly</small>
                   <h6 class="card-title">Modality Is the One UX Concept That Most Designers Don’t Fully...</h6>
                   <div class="profile">
-                    <img src="files/pics2.png">
+                    <img src="img/pics2.png">
                     <article>
                       <p>Matthew Garrett</p>
                       <small class="text-muted">5 min read</small>
@@ -571,12 +571,12 @@
           <div class="col-lg-4">
             <div class="card-deck cardblog2">
               <div class="card">
-                <img class="card-img-top" src="files/cardbg.png" alt="Card image cap">
+                <img class="card-img-top" src="img/cardbg.png" alt="Card image cap">
                 <div class="card-body">
                   <small class="text-muted">More from Nimbbly</small>
                   <h6 class="card-title">Modality Is the One UX Concept That Most Designers Don’t Fully...</h6>
                   <div class="profile">
-                    <img src="files/pics2.png">
+                    <img src="img/pics2.png">
                     <article>
                       <p>Santiago Dimaren</p>
                       <small class="text-muted">2 min read</small>
@@ -590,12 +590,12 @@
           <div class="col-lg-4">
             <div class="card-deck cardblog3">
               <div class="card">
-                <img class="card-img-top" src="files/cardbg.png" alt="Card image cap">
+                <img class="card-img-top" src="img/cardbg.png" alt="Card image cap">
                 <div class="card-body">
                   <small class="text-muted">More from Nimbbly</small>
                   <h6 class="card-title">Modality Is the One UX Concept That Most Designers Don’t Fully...</h6>
                   <div class="profile">
-                    <img src="files/pics2.png">
+                    <img src="img/pics2.png">
                     <article>
                       <p>Scott Welliver</p>
                       <small class="text-muted">3 min read</small>
@@ -615,7 +615,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 pp abouts">
-            <img src="files/nimllogo.png">
+            <img src="img/nimllogo.png">
             <p>We offer a great dimension of user-centered digital products and service for our customers. Our crew consist of agile and skillful developers. We offer you brilliant concepts and deliver projects on time.</p>
             <div class="smedia">
               <a href="#"><i class="fa fa-facebook"></i></a>
