--- a/brand.html
+++ b/brand.html
@@ -26,19 +26,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- favicon-->
-    <link rel="shortcut icon" type="image/png" href="files/nimbbly-favicon.png">
+    <link rel="shortcut icon" type="image/png" href="img/nimbbly-favicon.png">
 
     <!--scrollreveal-->
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
     <style>
       header {
-        background-image: url(files/service-bannerx4.jpg);
+        background-image: url(img/service-bannerx4.jpg);
       }
 
       @media (max-width: 1200px) {
     header {
-        background-image: url(files/service-bannermain.jpg);
+        background-image: url(img/service-bannermain.jpg);
     }
     header h1 {
     font-size: 40px;
@@ -310,7 +310,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6 text-left">
-            <a href="index.html" class="text-white"><img src="files/nimllogo.png"></a>
+            <a href="index.html" class="text-white"><img src="img/nimllogo.png"></a>
           </div>
           <div class="col-6 text-right">
               <button type="button" class="btn btn-default  nav-button" data-toggle="modal" data-target="#ModalCenter1"> HIRE US </button>
@@ -336,7 +336,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-2 text-center py-3">
-            <img class="img-icon p-1" src="files/a13.png" style="width: 80px; height: 80px;">
+            <img class="img-icon p-1" src="img/a13.png" style="width: 80px; height: 80px;">
           </div>
           <div class="col-lg-4 py-3">
             <article class="text-infos">
@@ -345,7 +345,7 @@
               </article>
           </div>
           <div class="col-lg-2 text-center py-3">
-            <img class="img-icon p-1" src="files/a5.png" style="width: 80px; height: 80px;">
+            <img class="img-icon p-1" src="img/a5.png" style="width: 80px; height: 80px;">
           </div>
           <div class="col-lg-4 py-3">
             <article class="text-infos">
@@ -355,7 +355,7 @@
           </div>
           
           <div class="col-lg-2 text-center py-3">
-            <img class="img-icon p-1" src="files/a12.png" style="width: 80px; height: 80px;">
+            <img class="img-icon p-1" src="img/a12.png" style="width: 80px; height: 80px;">
           </div>
           <div class="col-lg-4 py-3">
             <article class="text-infos">
@@ -364,7 +364,7 @@
             </article>
           </div>
           <div class="col-lg-2 text-center py-3">
-            <img class="img-icon p-1" src="files/a4.png" style="width: 80px; height: 80px;">
+            <img class="img-icon p-1" src="img/a4.png" style="width: 80px; height: 80px;">
           </div>
           <div class="col-lg-4 py-3">
             <article class="text-infos">
@@ -380,7 +380,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-4 pp abouts">
-            <img src="files/nimllogo.png">
+            <img src="img/nimllogo.png">
             <p>We offer a great dimension of user-centered digital products and service for our customers. Our crew consist of agile and skillful developers. We offer you brilliant concepts and deliver projects on time.</p>
             <div class="smedia">
               <a href="#"><i class="fa fa-facebook"></i></a>
